style.css
// https://piccalil.li/blog/a-modern-css-reset

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/* Code: */

body {
    font-family: 'Red Hat Display', sans-serif;
}

header {
    display: flex;
    flex-direction: column;
    align-items: center; 
}

.logo {
    margin-top: 3rem;
}

.photos-holder {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-content: center;
    margin: 4rem 0 0rem 0;
    min-width: 115%;
}

.heading-mobile {
    text-align: center;
}

.title {
    font-size: 4rem;
    line-height: 110%;
    text-align: center;
    color: #28283D;
    margin: 0 2.1875rem 1.5rem 2.1875rem;
    font-weight: 900;
}

.main-description {
    color: #87879D;
    text-align: center;
    font-size: 1.125rem;
    line-height: 150%;
    font-weight: 400;
    margin: 0 2.1875rem 1.5rem 2.1875rem;
}

.main-button {
    padding: 1rem 2.5rem;
    border: none;
    border-radius: 29px;
    color: white;
    line-height: 150%;
    font-weight: 700;
    font-size: 1rem;
    margin-right: 1.1rem;
}

.download-top {
    background-color: #4D96A9;
    margin-bottom: 1rem;
}

.download-top:hover {
    background-color: #71C0D4;
}

.version1 {
    color: #8FE3F9;
    margin-left: 0.4rem;
}

.what-is {
    background-color: #855FB1;
    margin-bottom: 2rem;
}

.what-is:hover {
    background-color: #B18BDD;
}

.divider {
    width: 2px;
    background-color: #D1D1DF;
    border: none;
    height: 5rem;
    margin-bottom: 0;
}

.divider-holder {
    align-items: center;
    display: block;
}

.divider-number {
    color: #87879D;
    font-weight: 700;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.divider-number p {
    background-color: white;
    border: 1px solid #D1D1DF;
    border-radius: 50%;
    padding: 1rem 1.1875rem;
}

.smarter-meetings {
    margin: 4rem 2rem 0 2rem;
    text-align: center;
}

.image-gallery {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    gap: 1rem;
    margin-bottom: 4rem;
}

.image-gallery img {
    border-radius: 15px;
}

.smarter-section-subheading {
    color: #4D96A9;
    text-transform: uppercase;
    font-weight: 800;
    letter-spacing: 4px;
    line-height: 110%;
    margin-bottom: 1rem;
}

.smarter-section-heading {
    color: #28283D;
    font-size: 2rem;
    line-height: 110%;
    font-weight: 900;
    margin-bottom: 2rem;
}

.smarter-section-description {
    color: #87879D;
    font-weight: 400;
    margin-bottom: 4rem;
}

.experience-together {
    background-image: linear-gradient(180deg, rgba(77,150,168,0.9) 0, rgba(77,150,168, 0.9) 0),url(assets/mobile/image-footer.jpg);
    padding-top: 4rem;
    background-position: center;
    background-size: cover;
    text-align: center;
    color: white;
}

.second-holder {
    position: relative;
    top: 1.8rem;
}

.experience-section-heading {
    font-size: 2rem;
    line-height: 110%;
    margin: 0 2rem 1.5rem 2rem;
}

.experience-section-description {
    margin: 0 2rem 1.5rem 2rem;
}

.download-bottom {
    background-color: #855FB1;
    margin-bottom: 4rem;
}

.download-bottom:hover {
    background-color: #B18BDD;
}

.version2 {
    color: #D9B8FF;
    margin-left: 0.25rem;
}

.heading-desktop {
    display: none;
    text-align: center;
    margin: 4.4375rem 4rem 0 4rem;
    max-width: 35rem;
    min-width: 30rem;
}

.left, .right {
    display: none;
}

.tablet {
    margin-bottom: 3rem;
}

@media (min-width: 50rem) {
    .photos-holder {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .smarter-meetings-text {
        display: none;
    }
    .smarter-meetings {
        display: flex;
        justify-content: center;
    }
}

@media (min-width: 80rem) {
    .photos-holder {
        display: flex;
        max-width: 100%;
        justify-content: center;
    }
    .heading-desktop {
        display: inline-block;
    }
    .left, .right {
        display: inline-block;
        margin: 0 10rem;
        max-width: 30rem;
    }
    .tablet {
        display: none;
    }
    
    .right {
        padding-top: 7.2rem;
    }
    .smarter-meetings-text {
        display: block;
    }
    .heading-mobile {
        display: none;
    }
    
    .smarter-meetings {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
    }
    .image-gallery {
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr;
        margin-left: 9.3rem;
        margin-right: 9.3rem;
    }
    .smarter-meetings-text {
        max-width: 22rem;
        text-align: center;
    }
    .experience-together {
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 3rem;
        padding: 6rem 0 3.5rem 0;
    }
    .experience-section-description {
        max-width: 19.18rem;
        text-align: left;
    }
    .experience-section-heading {
        font-size: 2.5rem;
        text-align: left;
        max-width: 20rem;
    }
}

